Introduce ResourceDeprecationChecker to group all index, data stream and other deprecation warnings